Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .content p {
-  margin: 50px 120px 40px 80px;
+  margin: 50px 80px 40px 80px;
   text-align: center;
   line-height: 50px;
   font-family: 'sfregular';
